--- a/templateFiles/fairing_data.html
+++ b/templateFiles/fairing_data.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>SPIDOR B2B QUALITY DASHBOARD - Fairing Data</title>
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css">
+  <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css"> 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $.get('/fairing_data_json', function(data) {
+        var dailyOrderCount = JSON.parse(data);
+        // Do whatever you want with the data here
+        console.log(dailyOrderCount);
+      });
+    });
+  </script>
 </head>
 <body>
-    <h1>SPIDOR B2B QUALITY DASHBOARD - Fairing Data</h1>
-    <table>
-        {{ daily_order_count|safe }}
-    </table>
+    {{ daily_order_count|safe }}
 </body>
 </html>
