--- a/templateFiles/index_upload_and_show_data_page2.html
+++ b/templateFiles/index_upload_and_show_data_page2.html
@@ -18,7 +18,7 @@
         <form action="/show_data" target="_blank">
           <input type="submit" value="브랜드별 지표 보기" />
         </form>
-        <form action="/fairing_data" target="_blank">
+        <form action="/fairing_data">
           <input type="submit" value="페어링 지표 보기" />
         </form>
         
